Velcro test First SandBox/src/objects/Sample_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_shipping_address__c</fullName>
        <formula>IF(NOT(ISBLANK(Customer__r.ShippingStreet)),      Customer__r.ShippingStreet            + &apos;\n&apos;, NULL) +
IF(NOT(ISBLANK(Customer__r.ShippingCity)),        Customer__r.ShippingCity              + &apos;\n&apos;, NULL) +
IF(NOT(ISBLANK(Customer__r.ShippingState)),       Customer__r.ShippingState,                    NULL) +
IF(NOT(ISBLANK(Customer__r.ShippingPostalCode)),  &quot;, &quot; + Customer__r.ShippingPostalCode + &apos;\n&apos;, NULL) +
IF(NOT(ISBLANK(Customer__r.ShippingCountry)),     Customer__r.ShippingCountry,                  NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account shipping address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign this samples request to a user</description>
        <inlineHelpText>Assign this samples request to a user</inlineHelpText>
        <label>Assigned to</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.Region__c</field>
                <operation>equals</operation>
                <valueField>User.Region__c</valueField>
            </filterItems>
            <infoMessage>Select user the request should be assigned to</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AssignedUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_Comments__c</fullName>
        <description>Provide customer feedback comments or details.</description>
        <inlineHelpText>Provide customer feedback comments or details , including why the samples fit to purpose or not and next actions to be performed.</inlineHelpText>
        <label>Customer Feedback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <description>Provide feedback from customer about the samples.</description>
        <inlineHelpText>Provide feedback from customer about the samples.</inlineHelpText>
        <label>Customer Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OK-Samples accepted</fullName>
                </value>
                <value>
                    <fullName>KO-Samples NOT accepted</fullName>
                </value>
                <value>
                    <fullName>Samples Not received</fullName>
                </value>
                <value>
                    <fullName>Need to re-send</fullName>
                </value>
                <value>
                    <fullName>No answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Shipping_Address__c</fullName>
        <description>Address where send samples will be shipped from VESA.</description>
        <inlineHelpText>Address where send samples will be shipped from VESA.</inlineHelpText>
        <label>Customer Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Deadline__c</fullName>
        <description>When the sample should be received by customer</description>
        <inlineHelpText>When the sample should be received by customer</inlineHelpText>
        <label>Delivery Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_additional_comments__c</fullName>
        <description>Delivery additional notes</description>
        <inlineHelpText>Delivery additional notes, provide any dtails needed</inlineHelpText>
        <label>Delivery additional comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_method__c</fullName>
        <label>Delivery method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>VELCRO TRUCK</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finished_Goods_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose this is not available from Sample Lab</inlineHelpText>
        <label>Finished Goods Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOtes_Special_Requirements__c</fullName>
        <description>APPLICATION/PURPOSE OF SAMPLES</description>
        <inlineHelpText>APPLICATION/PURPOSE OF SAMPLES</inlineHelpText>
        <label>Application/purpose of samples</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity this sample request belongs to</description>
        <inlineHelpText>Opportunity this sample request belongs to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Region__c</fullName>
        <inlineHelpText>Pick the region where customer is located</inlineHelpText>
        <label>Request Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>CONSUMER</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_to_Country__c</fullName>
        <description>Country where the request will go</description>
        <inlineHelpText>Choose the country where the request will go</inlineHelpText>
        <label>Request to Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_s_Phone__c</fullName>
        <inlineHelpText>Salesperson making the request</inlineHelpText>
        <label>Requestor&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <formula>TEXT(Opportunity__r.Opportunity_SBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Lab_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Sends request to Evan</inlineHelpText>
        <label>Sample Lab Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sample_Requested_Velcro_PN__c</fullName>
        <label>Sample Requested and QTY (Velcro PN)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_Affiliate__c</fullName>
        <description>To what affiliatte should the samples be sent?</description>
        <inlineHelpText>To what affiliatte should the samples be sent?</inlineHelpText>
        <label>Send to Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Delivery_method__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABE</fullName>
                </value>
                <value>
                    <fullName>APL</fullName>
                </value>
                <value>
                    <fullName>VEIT</fullName>
                </value>
                <value>
                    <fullName>VESA</fullName>
                </value>
                <value>
                    <fullName>VGMBH</fullName>
                </value>
                <value>
                    <fullName>VIF</fullName>
                </value>
                <value>
                    <fullName>VLTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Assigned to Planner</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed - Sample Lab</fullName>
                </value>
                <value>
                    <fullName>Completed - Planner of Finished Goods</fullName>
                </value>
                <value>
                    <fullName>Shipped to Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VELCRO_shipping_address__c</fullName>
        <formula>CASE( TEXT(Send_to_Affiliate__c),
 &apos;VLTD&apos;, $Label.VLTD_Address,
 &apos;VEIT&apos;, $Label.VEIT_Address,
 &apos;VIF&apos;, $Label.VIF_Address,
 &apos;VGMBH&apos;, $Label.VGMBH_Address,
 &apos;APL&apos;, $Label.APL_Address,
 &apos;ABE&apos;, $Label.ABE_Address,

 &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VELCRO shipping address</label>
        <type>Text</type>
    </fields>
    <label>Sample Request</label>
    <listViews>
        <fullName>All_Sample_requests</fullName>
        <columns>NAME</columns>
        <columns>Assigned__c</columns>
        <columns>Status__c</columns>
        <columns>NOtes_Special_Requirements__c</columns>
        <columns>Customer__c</columns>
        <columns>Delivery_Deadline__c</columns>
        <columns>Delivery_method__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Sample requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Samples_Requests</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Assigned__c</columns>
        <columns>Delivery_Deadline__c</columns>
        <columns>Delivery_method__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Samples Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Sample Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <recordTypes>
        <fullName>Canada_Sample_Request</fullName>
        <active>true</active>
        <description>For canada Sampls requests only</description>
        <label>Canada Sample Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>EMEA_Sample_Request</fullName>
        <active>true</active>
        <description>For all EMEA samples requests with existing product code</description>
        <label>EMEA Sample Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>NAM_Sample_Request</fullName>
        <active>true</active>
        <description>Sample Requests for North America</description>
        <label>NAM Sample Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Address_account_changed_check</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(PRIORVALUE(Customer_Shipping_Address__c )) 
&amp;&amp; NOT(ISBLANK(Customer_Shipping_Address__c ))
)
&amp;&amp; NOT(ISBLANK( VELCRO_shipping_address__c))</errorConditionFormula>
        <errorMessage>First remove the Affiliate address before adding customer delivery information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_check</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK( VELCRO_shipping_address__c ) &amp;&amp;
ISBLANK(Customer_Shipping_Address__c )</errorConditionFormula>
        <errorMessage>You must select either an Affiliate or provide the customer address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_velcro_changed_check</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(PRIORVALUE(VELCRO_shipping_address__c)) 
&amp;&amp; NOT(ISBLANK(VELCRO_shipping_address__c ))
)
&amp;&amp; NOT(ISBLANK( Customer_Shipping_Address__c))</errorConditionFormula>
        <errorMessage>First remove the Customer shipping  address before adding VELCRO Affiliate delivery information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivery_Method_check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(Customer_Shipping_Address__c ))
&amp;&amp; ISPICKVAL( Delivery_method__c , &apos;VELCRO TRUCK&apos;)</errorConditionFormula>
        <errorMessage>You can not use &apos;Velcro truck&apos; delivery method to send samples to a customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UPS_name_and_contact</fullName>
        <active>false</active>
        <description>If you choose UPS to customer , you must provide email and phone numbers</description>
        <errorConditionFormula>ISPICKVAL( Delivery_method__c ,&apos;UPS&apos;) 
&amp;&amp;
ISBLANK(VELCRO_shipping_address__c )
&amp;&amp; ( ISBLANK( Customer_Email__c ) 
||  ISBLANK(  Customer_Phone__c  ) )</errorConditionFormula>
        <errorMessage>If you choose UPS delivery , you must provide email and phone numbers</errorMessage>
    </validationRules>
</CustomObject>